[project]
name = "zpay"
version = "0.1.1"
description = "ZPay SDK — async client for the ZPay payment gateway. (alipay, weixinpay)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yuchan Han", email = "yuchanhan71@gmail.com" }
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
]

[project.urls]
Homepage = "https://github.com/h053698/z-pay-python"
Repository = "https://github.com/h053698/z-pay-python"
Issues = "https://github.com/h053698/z-pay-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zpay"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

